[project]
name = "ComfyUI-Rife-Tensorrt"
description = "Ultra fast frame interpolation using Rife with TensorRT inside ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI-Rife-Tensorrt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI RIFE TensorRT"
Icon = ""